--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -4,24 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
     android:label="@string/mainScreen_label"
-    app:startDestination="@id/mainScreen">
-
-    <fragment
-        android:id="@+id/mainScreen"
-        android:name="com.example.crypto.views.fragments.mainScreen.MainScreenFragment"
-        android:label="fragment_main_screen"
-        tools:layout="@layout/fragment_main_screen" >
-        <action
-            android:id="@+id/action_mainScreen_to_splashScreenFragment"
-            app:destination="@id/splashScreenFragment" />
-    </fragment>
+    app:startDestination="@id/splashScreenFragment">
     <fragment
         android:id="@+id/splashScreenFragment"
         android:name="com.example.crypto.views.fragments.splashScreen.SplashScreenFragment"
         android:label="fragment_splash_screen"
         tools:layout="@layout/fragment_splash_screen" >
         <action
-            android:id="@+id/action_splashScreenFragment_to_mainScreen"
-            app:destination="@id/mainScreen" />
+            android:id="@+id/action_splashScreenFragment_to_mainScreenFragment"
+            app:destination="@id/mainScreenFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/mainScreenFragment"
+        android:name="com.example.crypto.views.fragments.mainScreen.MainScreenFragment"
+        android:label="fragment_main_screen"
+        tools:layout="@layout/fragment_main_screen" />
 </navigation>
