--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -47,6 +47,15 @@
             android:layout_height="wrap_content"
             android:text="@string/mainScreen_label" />
 
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/sort_button"
+            android:src="@drawable/toolbar_sort_item"
+            android:background="@null"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
