--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -18,5 +18,38 @@
         android:id="@+id/mainScreenFragment"
         android:name="com.example.crypto.views.fragments.mainScreen.MainScreenFragment"
         android:label="fragment_main_screen"
-        tools:layout="@layout/fragment_main_screen" />
+        tools:layout="@layout/fragment_main_screen" >
+        <action
+            android:id="@+id/action_mainScreenFragment_to_detailsScreenFragment"
+            app:destination="@id/detailsScreenFragment" />
+
+    </fragment>
+    <fragment
+        android:id="@+id/detailsScreenFragment"
+        android:name="com.example.crypto.views.fragments.detailsScreen.DetailsScreenFragment"
+        android:label="fragment_details_screen"
+        tools:layout="@layout/fragment_details_screen" >
+        <action
+            android:id="@+id/action_detailsScreenFragment_to_mainScreenFragment"
+            app:destination="@id/mainScreenFragment" />
+        <argument
+            android:name="coinId"
+            app:argType="string" />
+        <argument
+            android:name="coinPrice"
+            app:argType="string" />
+        <argument
+            android:name="coinIconUrl"
+            app:argType="string" />
+        <argument
+            android:name="coinName"
+            app:argType="string" />
+        <argument
+            android:name="marketCap"
+            app:argType="string"
+            android:defaultValue="No data" />
+        <argument
+            android:name="coinPriceChange"
+            app:argType="float" />
+    </fragment>
 </navigation>
