--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#2ED25C</color>
     <color name="gray">#979797</color>
+    <color name="default_gray">#828282</color>
+    <color name="gray_for_radio_button">#C4C4C4</color>
+    <color name="orange">#F8A23A</color>
+    <color name="gray_for_bottom_menu">#FFFFFFBD</color>
 </resources>
