--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -42,7 +42,7 @@
 
         <TextView
             android:id="@+id/main_screen_label"
-            style="@style/main_screen_label"
+            style="@style/toolbar_label_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/mainScreen_label" />
