--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/bottom_menu_item_main"
+        android:id="@+id/mainScreenFragment"
         android:title="@string/bottom_menu_item_main_text"
         android:icon="@drawable/bottom_menu_main"/>
     <item
-        android:id="@+id/bottom_menu_item_settings"
-        android:title="@string/bottom_menu_item_settings_text"
+        android:id="@+id/settingsScreenFragment"
+        android:title="@string/settings_label_text"
         android:icon="@drawable/ic_baseline_settings_24"/>
 
 </menu>
