--- a/app/src/main/res/layout/fragment_settings_screen.xml
+++ b/app/src/main/res/layout/fragment_settings_screen.xml
@@ -56,6 +56,7 @@
                 android:id="@+id/profile_picture"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginHorizontal="16dp"
                 android:src="@drawable/avatar_solid"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_default="percent"
