--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="orange">#F8A23A</color>
     <color name="gray_for_bottom_menu">#FFFFFFBD</color>
     <color name="helper_text_color">#B02727</color>
+    <color name="black_transparent">#80000000</color>
 </resources>
