--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -156,4 +156,13 @@
         <item name="counterMaxLength">20</item>
         <item name="endIconMode">clear_text</item>
     </style>
+
+    <style name="no_internet_screen_text">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:letterSpacing">0.01</item>
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+    </style>
+
 </resources>
