--- a/app/src/main/res/layout/fragment_details_screen.xml
+++ b/app/src/main/res/layout/fragment_details_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.detailsScreen.DetailsScreenFragment">
+    tools:context=".views.fragments.details_screen.DetailsScreenFragment">
 
     <android.widget.Toolbar
         android:id="@+id/details_screen_toolbar"
