--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.mainScreen.MainScreenFragment">
+    tools:context=".views.fragments.main_screen.MainScreenFragment">
 
     <ProgressBar
         android:id="@+id/main_screen_progressbar"
