--- a/app/src/main/res/layout/fragment_settings_screen.xml
+++ b/app/src/main/res/layout/fragment_settings_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.settingsScreen.SettingsScreenFragment">
+    tools:context=".views.fragments.settings_screen.SettingsScreenFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
